# bone_detector_app

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: celery_app.py  config.py  datasets.py  detectron.py  formatting.py  hf.py  metrics.py  tasks.py  ui.py  yolo.py
cache/: metrics_frcnn.json  metrics_yolo.json
notebooks/: notebook.ipynb
scripts/: compute_metrics.py  start_server.sh
